--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nation Forge</title>
   </head>
-  <body class="bg-amber-200">
+  <body class="bg-white">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
